# rustine

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TODOS.md  package.json  pnpm-lock.yaml  rustine.db  tailwind.config.js
.github/: copilot-instructions.md
.github/workflows/: ci.yaml
assets/icons/: tray.icns
assets/src/: styles.css
bmad/: config.yaml  status.yaml
bmad/artifacts/: architecture.md  audit-baseline-2026-03-05.md  connector.yml  dashboard.md  marketing-brief.md  prd.md  product-brief-webapp.md  product-brief.md  tech-spec.md
bmad/artifacts/adrs/: ADR-05-logging-observability.md  ADR-06-db-file-location-and-migrations.md  ADR-07-webfetch-timeouts.md  ADR-08-tray-feature-default.md  ADR-09-packaging-distribution.md
bmad/artifacts/history/: status-2026-03-05-160902.md  status-2026-03-05-161336.md  status-2026-03-06-225638.md  status-2026-03-06-225810.md  status-2026-03-06-230425.md  status-2026-03-06-232155.md  status-2026-03-06-232409.md  status-2026-03-06-232620.md  status-20260307T164238.yaml  status-20260307T165216.yaml  status-20260307T165721.yaml
bmad/artifacts/stories/: AUDIT-001.md  AUDIT-002.md  PLAN-ARCH.md  S1-01.md  S1-02.md  S1-03.md
bmad/references/: sive-layout.html
scripts/: bmad.mjs
src/: db.rs  main.rs  tray.rs  ui.rs  webview.rs
tools/: build_icns_simple.py  generate_icns.py  generate_icons.py
