[package]
name = "rustine"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.7"
dioxus-desktop = "0.7"
serde = { version = "1.0", features = ["derive"] }
url = "2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
tray-icon = { version = "0.21.3", optional = true }
anyhow = "1.0"
thiserror = "2.0.18"
crossbeam-channel = "0.5"
once_cell = "1.20"
chrono = { version = "0.4", features = ["serde"] }

[features]
real_tray = ["tray-icon"]
