[package]
name = "rustine"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.7"
dioxus-desktop = "0.7"
serde = { version = "1.0", features = ["derive"] }
url = "2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
tray-icon = { version = "0.21.3", optional = true }
anyhow = "1.0"
thiserror = "2.0.18"
crossbeam-channel = "0.5"
once_cell = "1.20"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
wry = "0.53"
webbrowser = "0.7"
tao = "0.34"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
image = "0.25"
scraper = "0.14"

[features]
default = ["real_tray"]
real_tray = ["tray-icon"]
